News UAT/force-app/main/default/objects/SocialAd__c/SocialAd__c.object-meta.xml
<CustomObject>
    <description>This object is for NewsXtend Customers who access My-Account community</description>
    <label>Proof Ad</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>ProofAd Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proof Ads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>