News UAT/force-app/main/default/objects/SocialAd__c/fields/Ad_Headline__c.field-meta.xml
<CustomField>
    <fullName>Ad_Headline__c</fullName>
    <description>This field will have headline for facebook ad</description>
    <inlineHelpText>This field will have headline for facebook ad</inlineHelpText>
    <label>Ad Headline</label>
    <length>220</length>
    <type>Text</type>
</CustomField>