News UAT/force-app/main/default/objects/SocialAd__c/fields/Ad_Link__c.field-meta.xml
<CustomField>
    <fullName>Ad_Link__c</fullName>
    <description>This field will have link for facebook ad</description>
    <inlineHelpText>This field will have link for facebook ad</inlineHelpText>
    <label>Ad Link</label>
    <length>220</length>
    <type>Text</type>
</CustomField>