News UAT/force-app/main/default/objects/SocialAd__c/fields/Ad_Newsfeed_Link_Description__c.field-meta.xml
<CustomField>
    <fullName>Ad_Newsfeed_Link_Description__c</fullName>
    <description>This field will have Newsfeed Link Description for facebook ad</description>
    <inlineHelpText>This field will have Newsfeed Link Description for facebook ad</inlineHelpText>
    <label>Ad Newsfeed Link Description</label>
    <length>220</length>
    <type>Text</type>
</CustomField>