News UAT/force-app/main/default/objects/SocialAd__c/fields/Ad_Text__c.field-meta.xml
<CustomField>
    <fullName>Ad_Text__c</fullName>
    <description>This field will have Text for facebook ad</description>
    <inlineHelpText>This field will have Text for facebook ad</inlineHelpText>
    <label>Ad Text</label>
    <length>220</length>
    <type>Text</type>
</CustomField>