News UAT/force-app/main/default/objects/SocialAd__c/fields/Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>Ad_Type__c</fullName>
    <description>These are the available ad types for facebook ad</description>
    <inlineHelpText>This ad type will be used as an objective for facebook ad.</inlineHelpText>
    <label>Ad Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Event Response</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Reach</fullName>
            </value>
            <value>
                <fullName>Traffic</fullName>
            </value>
            <value>
                <fullName>Video Views</fullName>
            </value>
            <value>
                <fullName>Messenger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>