News UAT/force-app/main/default/objects/SocialAd__c/fields/Button_Type__c.field-meta.xml
<CustomField>
    <fullName>Button_Type__c</fullName>
    <description>This will be used to add action on facebook ad</description>
    <inlineHelpText>This will be used to add action on facebook ad</inlineHelpText>
    <label>Button Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ad_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Download</fullName>
            </value>
            <value>
                <fullName>Get Directions</fullName>
            </value>
            <value>
                <fullName>Get Showtimes</fullName>
            </value>
            <value>
                <fullName>Learn More</fullName>
            </value>
            <value>
                <fullName>Send Message</fullName>
            </value>
            <value>
                <fullName>Request Time</fullName>
            </value>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>See Menu</fullName>
            </value>
            <value>
                <fullName>Show Now</fullName>
            </value>
            <value>
                <fullName>Sign Up</fullName>
            </value>
            <value>
                <fullName>Watch More</fullName>
            </value>
            <value>
                <fullName>Listen Now</fullName>
            </value>
            <value>
                <fullName>Apply Now</fullName>
            </value>
            <value>
                <fullName>Book Now</fullName>
            </value>
            <value>
                <fullName>Call Now</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Subscribe</fullName>
            </value>
            <value>
                <fullName>Get Quote</fullName>
            </value>
            <value>
                <fullName>Donate Now</fullName>
            </value>
            <value>
                <fullName>Shop Now</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Get Offer</fullName>
            </value>
            <value>
                <fullName>Send WhatsApp Message</fullName>
            </value>
            <value>
                <fullName>Preregister</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>