News UAT/force-app/main/default/objects/SocialAd__c/fields/Creative_Type__c.field-meta.xml
<CustomField>
    <fullName>Creative_Type__c</fullName>
    <description>This will be used for format of facebook ad</description>
    <inlineHelpText>This will be used for format of facebook ad</inlineHelpText>
    <label>Creative Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ad_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single image</fullName>
            </value>
            <value>
                <fullName>Carousel</fullName>
            </value>
            <value>
                <fullName>Slideshow</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>