News UAT/force-app/main/default/objects/SocialAd__c/fields/Display_Ad_Link__c.field-meta.xml
<CustomField>
    <fullName>Display_Ad_Link__c</fullName>
    <description>Will contain link for display ad content</description>
    <label>Display Ad Link</label>
    <length>250</length>
    <type>Text</type>
</CustomField>