News UAT/force-app/main/default/objects/SocialAd__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date for the social ad</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>