News UAT/force-app/main/default/objects/SocialAd__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Event Name</description>
    <label>Event Name</label>
    <length>220</length>
    <type>Text</type>
</CustomField>