News UAT/force-app/main/default/objects/SocialAd__c/fields/Form_Client_Specified_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Form_Client_Specified_Criteria__c</fullName>
    <description>Form Client Specified Criteria for form of social ad type &#39;Lead Generation&#39;</description>
    <label>Form Client Specified Criteria</label>
    <length>250</length>
    <type>Text</type>
</CustomField>