News UAT/force-app/main/default/objects/SocialAd__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <description>Form name for social ad of type &#39;Lead Generation&#39;</description>
    <label>Form Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>