News UAT/force-app/main/default/objects/SocialAd__c/fields/Form_Privacy_Policy_Link__c.field-meta.xml
<CustomField>
    <fullName>Form_Privacy_Policy_Link__c</fullName>
    <description>Form Privacy Policy Link for social ad of type &#39;Lead Generation&#39;</description>
    <label>Form Privacy Policy Link</label>
    <length>250</length>
    <type>Text</type>
</CustomField>