News UAT/force-app/main/default/objects/SocialAd__c/fields/Form_Thank_You_Page_Link__c.field-meta.xml
<CustomField>
    <fullName>Form_Thank_You_Page_Link__c</fullName>
    <description>Form Thank You Page Link for social ad of type &#39;Lead Generation&#39;</description>
    <label>Form Thank You Page Link</label>
    <length>250</length>
    <type>Text</type>
</CustomField>