News UAT/force-app/main/default/objects/SocialAd__c/fields/Greetings_Card__c.field-meta.xml
<CustomField>
    <fullName>Greetings_Card__c</fullName>
    <description>The automated message that a user sees once entering the Messenger Conversation. We recommend this is created, giving users contacting your brand the best possible experience.</description>
    <inlineHelpText>The automated message that a user sees once entering the Messenger Conversation. We recommend this is created, giving users contacting your brand the best possible experience.</inlineHelpText>
    <label>Greetings Card</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>