News UAT/force-app/main/default/objects/SocialAd__c/fields/Mark_As_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Mark_As_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used to mark an ad as deleted</description>
    <label>Mark As Deleted</label>
    <type>Checkbox</type>
</CustomField>