News UAT/force-app/main/default/objects/SocialAd__c/fields/Parent_Social_Ad__c.field-meta.xml
<CustomField>
    <fullName>Parent_Social_Ad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for social ad to which social form will belong</description>
    <label>Parent Social Ad</label>
    <referenceTo>SocialAd__c</referenceTo>
    <relationshipName>Social_Ads</relationshipName>
    <type>Lookup</type>
</CustomField>