News UAT/force-app/main/default/objects/SocialAd__c/fields/Quick_Replies__c.field-meta.xml
<CustomField>
    <fullName>Quick_Replies__c</fullName>
    <description>Quick replies allow the user in the Messenger Conversation to select from populated fields that relate to the nature of their enquiry. This also allows your business to quickly be informed of what the user is wanting to know.</description>
    <inlineHelpText>Quick replies allow the user in the Messenger Conversation to select from populated fields that relate to the nature of their enquiry. This also allows your business to quickly be informed of what the user is wanting to know.</inlineHelpText>
    <label>Quick Replies</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>