News UAT/force-app/main/default/objects/SocialAd__c/fields/Social_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Social_Campaign__c</fullName>
    <description>Parent Proof</description>
    <inlineHelpText>Parent Proof</inlineHelpText>
    <label>Proof</label>
    <referenceTo>SocialCampaign__c</referenceTo>
    <relationshipLabel>Proff Ads</relationshipLabel>
    <relationshipName>Social_Ads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>