News UAT/force-app/main/default/objects/SocialAd__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This will be used to maintain version</description>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>