News UAT/force-app/main/default/objects/SocialAd__c/fields/X2_Portal_Social_Ad_Reference__c.field-meta.xml
<CustomField>
    <fullName>X2_Portal_Social_Ad_Reference__c</fullName>
    <externalId>true</externalId>
    <label>X2 Portal Social Ad Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>