News UAT/force-app/main/default/objects/SocialAd__c/recordTypes/Display_Ad.recordType-meta.xml
<RecordType>
    <fullName>Display_Ad</fullName>
    <active>true</active>
    <description>Used to create display ad</description>
    <label>Display Ad</label>
</RecordType>