News UAT/force-app/main/default/objects/SocialAd__c/recordTypes/Social_Ad.recordType-meta.xml
<RecordType>
    <fullName>Social_Ad</fullName>
    <active>true</active>
    <description>Social ad details</description>
    <label>Social Ad</label>
</RecordType>