News UAT/force-app/main/default/objects/SocialAd__c/recordTypes/Social_Form.recordType-meta.xml
<RecordType>
    <fullName>Social_Form</fullName>
    <active>true</active>
    <description>Social Form for the social ad of type &#39;Lead Generation&#39;</description>
    <label>Social Form</label>
</RecordType>